added bbox info inside print-window

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -192,6 +192,8 @@
             "printButtonPrefix": "Dokument",
             "downloadButtonSuffix": "herunterladen",
             "downloadOngoingMiddleText": " wird vorbereitet",
+            "mapBboxLabel": "BBOX",
+            "mapBboxButton": "Info",
             "warnPrintTimedOutTitle": "Druckfehler",
             "warnPrintTimedOutText": "Die Druckerzeugung hat das erlaubte Zeitlimit überschritten."
         }
