--- a/src/resources/locale/app-locale-fr.json
+++ b/src/resources/locale/app-locale-fr.json
@@ -31,6 +31,14 @@
             "defaultDateFormat": "d/m/Y H:i:s"
         }
     },
+    "Koala.view.button.Permalink": {
+        "config": {
+            "data":{
+                "tooltip": "fr:Permalink",
+                "windowTitle": "fr:Permalink"
+            }
+        }
+    },
     "Koala.view.button.TimeReference": {
         "config": {
             "data":{
@@ -822,7 +830,15 @@
                 "imprintButtonText": "fr:Hilfe",
                 "settingsButtonText": "fr:Einstellungen",
                 "moreLayersButtonText": "fr:Weitere Themen",
-                "addLayerButtonText": "fr:Externen Layer hinzufügen"
+                "addLayerButtonText": "fr:Externen Layer hinzufügen",
+                "permalinkButtonText": "fr:Permalink"
+            }
+        }
+    },
+    "Koala.view.panel.MobilePermalink": {
+        "config": {
+            "data": {
+                "title": "fr:Permalink"
             }
         }
     },
@@ -863,6 +879,13 @@
                 "timeRangeFilter": "fr:Zeitraumfilter",
                 "pointInTimeFilter": "fr:Zeitpunktfilter",
                 "buttonTextChangeFilter": "fr:Filter auf Layer anwenden"
+            }
+        }
+    },
+    "Koala.view.form.Permalink": {
+        "config": {
+            "data": {
+                "refreshBtnText": "fr:Erneuern"
             }
         }
     },
