--- a/src/resources/locale/app-locale-fr.json
+++ b/src/resources/locale/app-locale-fr.json
@@ -343,6 +343,11 @@
                 "resetFilterBtnText": "fr:Reset",
                 "selectChartLayerComboLabel": "fr:",
                 "undoBtnText": "fr:…zurückzoomen",
+                "downloadBtnText": "fr:Download",
+                "downloadChartDataMsgTitle": "fr:Info",
+                "downloadChartDataMsgMessage": "fr:Aktuelle Chartdaten herunterladen?",
+                "downloadChartDataMsgButtonYes": "fr:Ja",
+                "downloadChartDataMsgButtonNo": "fr:Nein",
                 "removeSeriesBtnText": "fr:Serie entfernen",
                 "removeSeriesQuestionTitle": "fr:Rückfrage",
                 "removeSeriesQuestionTpl": "fr:Serie '{0}' entfernen?"
